<resources>
    <string name="app_name">Scavenger Hunt</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcomeMsg">Welcome to the Tech Day Ireland Scavenger Hunt App!</string>
    <string name="information1">To begin the scavenger hunt, press the Telescope image to start scanning QR codes!</string>
    <string name="eula">By clicking the agree button you agree to follow the rukes of the hunt.</string>
    <string name="RulesButton">Rules</string>
    <string name="prizeButton">Prizes</string>
    <string name="getStartButton">Get Started</string>
    <string name="rulesOfGame">Please find below the rules of the game.</string>
    <string name="rule1">(1).People can participate in teams or individually but each person must download the app or collect a sheet to fill out.\n</string>
    <string name="rule2">(2).Sheets can be collected from the volunteer stand at the entrance.\n</string>
    <string name="rule3">(3).You must collect all the items to complete the hunt.\n\t\t\t(A).For the app will automatically inform you if you have collected all the codes.\n\t\t\t(B).If using the sheets you must collect all the letters on top of the QR code. Rearrange these letters to get the message. \n</string>
    <string name="rule4">(4).After completing the hunt you must email <u>tech.day.ireland@ericsson.com</u> with the message and the subject \'TechDay Scavenger Hunt\'.\n</string>
    <string name="rule5">(5).You can then collect your prize from the volunteer stand.</string>
    <string name="prizeInfo">The following prizes are up for grabs!</string>
    <string name="form">Please fill in the following:</string>
    <string name="email">Your E-mail: </string>
    <string name="userName">Your Name: </string>
    <string name="sumbit">Submit</string>
    <string name="goodLuck">Good Luck!</string>
    <string name="start">Start Scavenger Hunt!</string>
    <string name="title_activity_scanner_page">ScannerPage</string>
    <string name="randomizeButton">Start</string>
    <string name="title_activity_qrscanner">QRScanner</string>
    <string name="scannerInfo">*NOTE*\nPress the Telescope button and hold your phone over a QR code to scan that code.\n\nDuplicate scans will not count and will not be recorded.</string>
    <string name="startButton">Start</string>
    <string name="prize1">(1).\tThere are 20 golden tickets up for grabs as prizes.\n</string>
    <string name="prize2">(2).\tEach golden ticket entitles the holder to skip the queues for the food and drink.\n</string>
    <string name="prize3">(3).\tEach ticket is one use and can be free given to others to use.</string>
    <string name="stopButton">Stop</string>
    <string name="restartButton">Restart</string>
    <string name="newStartHeading">Pick Yer Poison!</string>
    <string name="scannerButton">Scan item</string>
    <string name="currentItemText">------Add in function-----</string>
    <string name="currentItm">Current Item</string>
    <string name="currentItm2">Current Item: </string>
    <string name="firstItm">First Item</string>
    <string name="techDayButton">Tech Day Ireland Web Site</string>
    <string name="progressButton">View Progress</string>
    <string name="agreeTxt">Agree to terms</string>
    <string name="countSoFar">Count</string>
    <string name="itemsCollectionText">Item Collections</string>
    <string name="newStartButton">This is a temporary button, new start page</string>
    <string name="itemListText">Treasures found:</string>
    <string name="scanAgain">Scan Again: </string>
    <string name="progressText">See your progress so far!</string>
    <string name="finishedTxt">Congratulations! You have finished the scavenger hunt! Press the button below to submit your name &amp; email</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="infoProgress">See below how much progress you have made!</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>
