<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="com.example.ezsmuel.scavengerhunt.RulesPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:paddingBottom="25dp"
            android:text="@string/rulesOfGame"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/rule1"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/rule2"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/rule3"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/rule4"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/rule5"
            android:textAllCaps="false"
            android:textSize="24sp" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>
