<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@drawable/back2"
    tools:context="com.example.ezsmuel.scavengerhunt.MainActivity">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:textAllCaps="false"
            android:text="@string/welcomeMsg"
            android:paddingBottom="25dp"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/eula"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:paddingBottom="40dp"
            android:paddingTop="40dp"
            android:buttonTint="@color/agree"
            android:text="@string/agreeTxt"
            android:textColor="@color/agree"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/getStartButton"
            android:layout_width="fill_parent"
            android:layout_height="91dp"
            android:background="@drawable/scroll"
            android:enabled="false"
            android:fontFamily="cursive"
            android:onClick="getStartedButton"
            android:text="@string/getStartButton"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
